--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "next-cloudinary": "^6.10.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
